--- a/styles.css
+++ b/styles.css
@@ -327,7 +327,7 @@ nav .fa-solid{
 @media screen and (max-width:650px) {
     #header{
         /* background-image: url(images/phone-background.png); */
-        background-image: url(images/small4.png);
+        background-image: url(images/1.png);
     }
     .header-text{
         margin-top: 100%;
