--- a/styles.css
+++ b/styles.css
@@ -245,6 +245,7 @@ nav ul li a:hover::after{
     text-decoration: none;
     color: #fff;
     transition: background 0.5s;
+    cursor: pointer;
 }
 .btn:hover{
     background: #2bb2a4;
